--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur amet magnam dolorum tempore aspernatur voluptate dolor quia maxime itaque, velit commodi accusamus modi, molestiae ullam ex illo facere incidunt fugit?</p>
       </div>
   </section>
-		<script type="module" src="app.js"></script>
+		<script  src="app.js"></script>
 	</body>
 </html>
